--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <a
-  href="http://127.0.0.1:5500/index.html" ><h2>Movies Ranking Project</h2></a>
+  href="http://127.0.0.1:3000/Birthday Invite/birthday invite.html" ><h2>Movies Ranking Project</h2></a>
   </a>
   <h3>Mairead's Movie Recommendations</h3>
   <h4>My Top 3 movies of all-time</h4>
@@ -24,7 +24,7 @@
   <p> This is an inspirational movie</p>
   </ol>
   <a 
-  href="http://127.0.0.1:3000/Birthday Invite/index.html" ><h2>Birthday Invite Project </h2></a>
+  href="http://127.0.0.1:3000/Birthday Invite/birthday invite.html" ><h2>Birthday Invite Project </h2></a>
   <h4>On the 1st of September</h4>
   <img src="https://fastly.picsum.photos/id/158/4836/3224.jpg?hmac=Gu_3j3HxZgR74iw1sV0wcwlnSZSeCi7zDWLcjblOp_c"
     Width="500"
