--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <a
   href="https://www.google.com/maps?q=croagh+patrick&source=lmns&entry=mc&bih=593&biw=1280&hl=en-GB">Map link</a>
   <hr>
-  <a href="./public/about.html"> About Me </a>
-  <a href="./public/contact.html"> Contact Me </a>
+  <a href="./about.html"> About Me </a>
+  <a href="./contact.html"> Contact Me </a>
 </body>
 </html>
